<resources>
    <string name="app_name">MovieQuotes</string>
    <string name="action_settings">Settings</string>
    <string name="quote">Quote</string>
    <string name="movie">Movie</string>
    <string name="add_dialog_title">Add a quote</string>
    <string name="edit_dialog_title">Edit a quote</string>
    <string name="enter_a_quote">Enter a quote</string>
    <string name="enter_a_movie">Enter a movie</string>
    <string name="increase_font_size">Increase font size</string>
    <string name="decrease_font_size">Decrease font size</string>
    <string name="settings_dialog_title">Which settings do you want?</string>
    <string name="show_favorite_movie">Show favorite movie</string>
    <string name="show_favorite_quote">Show favorite quote</string>
    <string name="show_all_quotes">Show all quotes</string>
    <string name="set_author">Set author</string>
    <string name="enter_title">Enter title</string>
    <string-array name="settings_choices">
        <item>Sound</item>
        <item>Search</item>
        <item>General</item>
    </string-array>
    <string name="layout_edit_app_title">App Author</string>
</resources>
